fix: Replace the css property margin with gap for some elements in ./src/components/Main/NavTab/NavTab.css

--- a/src/components/Main/NavTab/NavTab.css
+++ b/src/components/Main/NavTab/NavTab.css
@@ -10,6 +10,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  gap: 40px;
 }
 
 .nav-tab__link {
@@ -20,9 +21,5 @@
 }
 
 .nav-tab__list-item {
-  margin: 0 40px 0 0;
-}
-
-.nav-tab__list-item:last-child {
-  margin: 0;
+  font-size: 0;
 }
